# Nexus-Inventory-backend

./: README.md  pyproject.toml
src/config/: router.py  settings.py  urls.py
src/core/nexus_inventory/: apps.py
src/core/nexus_inventory/admin/: __init__.py  asset.py  asset_history.py  category.py  employee.py  item.py  software.py
src/core/nexus_inventory/migrations/: 0001_initial.py  0002_alter_employee_hire_date.py  0003_software_category_tracks_software_asset_delete_item.py  0004_asset_asset_history.py  0005_asset_image.py
src/core/nexus_inventory/models/: __init__.py  asset.py  asset_history.py  category.py  employee.py  item.py  software.py
src/core/nexus_inventory/serializers/: __init__.py  asset.py  asset_history.py  category.py  employee.py  item.py  software.py
src/core/nexus_inventory/views/: __init__.py  asset.py  asset_history.py  category.py  employee.py  item.py  software.py
src/core/uploader/: router.py  views.py
src/core/uploader/migrations/: 0001_initial.py
src/core/user/: apps.py  router.py
src/core/user/migrations/: 0001_initial.py
src/core/usuario/: apps.py  router.py
src/core/usuario/migrations/: 0001_initial.py
